--- a/calculadora.css
+++ b/calculadora.css
@@ -1697,3 +1697,48 @@ textarea.form-control {
   }
 }
 
+/* CSS para os ícones dos buffs inline */
+.buff-icon-inline {
+  width: 18px;
+  height: 18px;
+  vertical-align: middle;
+  margin: 0 3px 0 0;
+  object-fit: contain;
+  filter: drop-shadow(0 1px 2px rgba(0,0,0,0.2));
+}
+
+.buffs-info-section {
+  margin-top: 15px;
+  padding-top: 15px;
+  border-top: 1px solid #eee;
+}
+
+.buff-info {
+  padding-left: 0px;
+  margin: 2px 0;
+}
+
+.buff-info .stat-label {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .buff-icon-inline {
+    width: 16px;
+    height: 16px;
+  }
+  
+  .buff-info {
+    padding-left: 0px;
+  }
+}
+
+@media (max-width: 576px) {
+  .buff-icon-inline {
+    width: 14px;
+    height: 14px;
+  }
+}
